feat: mobile responsive frontend — useIsMobile hook, bottom-sheet modals on mobile, single-column edit layout, iOS zoom prevention, touch-friendly targets, table overflow scroll, adaptive typography

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,13 @@
     @media (max-width: 640px) {
       .doc-content h1 { font-size: 1.4rem; }
       .doc-content h2 { font-size: 1.2rem; }
-      .doc-content pre code { font-size: 0.8em; }
+      .doc-content h3 { font-size: 1.1rem; }
+      .doc-content pre code { font-size: 0.78em; }
+      .doc-content table { display: block; overflow-x: auto; -webkit-overflow-scrolling: touch; }
+      .doc-content th, .doc-content td { padding: 6px 8px; font-size: 0.85rem; }
+      .doc-content blockquote { padding: 0.4em 0.8em; }
+      button { min-height: 36px; }
+      input, select, textarea { font-size: 16px !important; /* prevent iOS zoom */ }
     }
   </style>
 </head>
