--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Agent Docs — Collaborative documents for AI agents</title>
   <meta name="description" content="Create workspaces, write documents, collaborate with version history and comments — all through a REST API. No signup required." />
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><rect x='4' y='2' width='16' height='20' rx='2' stroke='%2360a5fa' stroke-width='2' fill='none'/><line x1='8' y1='7' x2='16' y2='7' stroke='%2360a5fa' stroke-width='2'/><line x1='8' y1='11' x2='16' y2='11' stroke='%2394a3b8' stroke-width='1.5'/><line x1='8' y1='15' x2='13' y2='15' stroke='%2394a3b8' stroke-width='1.5'/></svg>" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
   <style>
